--- a/src/app/components/Product_Component/products/products.component.scss
+++ b/src/app/components/Product_Component/products/products.component.scss
@@ -52,6 +52,10 @@ p {
   margin-left: 15px;
 }
 
+#category {
+  text-transform: capitalize;
+}
+
 ::ng-deep .ngx-pagination {
   align-content: center !important;
 
