--- a/src/app/components/User_Component/home/home.component.html
+++ b/src/app/components/User_Component/home/home.component.html
@@ -1,4 +1,4 @@
-<div id="home-component" *ngIf="loggedUser" class="row p-4">
+<div id="home-component" *ngIf="_authService.loggedIn()" class="row p-4">
   <div class="col">
     <h1 class="text-center">
       Hello, {{ loggedUser.first_name }} {{ loggedUser.last_name }}
