--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -30,29 +30,43 @@
             Collections
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a [routerLink]="['products', 'mens']" class="dropdown-item">Men</a>
-            <a [routerLink]="['products', 'womens']" class="dropdown-item"
+            <a [routerLink]="['cartify/products', 'mens']" class="dropdown-item"
+              >Men</a
+            >
+            <a
+              [routerLink]="['cartify/products', 'womens']"
+              class="dropdown-item"
               >Women</a
             >
-            <a [routerLink]="['products', 'kids']" class="dropdown-item"
+            <a [routerLink]="['cartify/products', 'kids']" class="dropdown-item"
               >Kids</a
             >
-            <a [routerLink]="['products', 'outdoorgear']" class="dropdown-item"
+            <a
+              [routerLink]="['cartify/products', 'outdoor gear']"
+              class="dropdown-item"
               >Outdoor Gear</a
             >
-            <a [routerLink]="['products', 'sportswear']" class="dropdown-item"
+            <a
+              [routerLink]="['cartify/products', 'sportswear']"
+              class="dropdown-item"
               >Sportswear</a
             >
-            <a [routerLink]="['products', 'tops']" class="dropdown-item"
+            <a [routerLink]="['cartify/products', 'tops']" class="dropdown-item"
               >Tops</a
             >
-            <a [routerLink]="['products', 'bottoms']" class="dropdown-item"
+            <a
+              [routerLink]="['cartify/products', 'bottoms']"
+              class="dropdown-item"
               >Bottoms</a
             >
-            <a [routerLink]="['products', 'shoes']" class="dropdown-item"
+            <a
+              [routerLink]="['cartify/products', 'shoes']"
+              class="dropdown-item"
               >Shoes</a
             >
-            <a [routerLink]="['products', 'accessories']" class="dropdown-item"
+            <a
+              [routerLink]="['cartify/products', 'accessories']"
+              class="dropdown-item"
               >Accessories</a
             >
             <div class="dropdown-divider"></div>
@@ -80,48 +94,44 @@
   <div class="collapse navbar-collapse col-lg-4 flex-end" id="toggleContent">
     <div class="row">
       <ul class="navbar-nav">
-        <ng-container *ngIf="!_authService.loggedIn()">
-          <li class="nav-item">
+        <li class="nav-item" *ngIf="!_authService.loggedIn()">
+          <a
+            id="login"
+            class="nav-link navbar-item"
+            data-toggle="modal"
+            data-target="#modalForm"
+            role="button"
+            aria-expanded="false"
+            aria-controls="collapseExample"
+            >SIGN IN<i class="fa fa-user ml-2"></i
+          ></a>
+        </li>
+        <li class="nav-item dropdown" *ngIf="loggedUser">
+          <a
+            class="nav-link navbar-item dropdown nav-item"
+            role="button"
+            data-toggle="dropdown"
+            aria-haspopup="true"
+            aria-expanded="false"
+            >My Account<i class="fa fa-user ml-2"></i
+          ></a>
+          <div class="dropdown-menu" aria-labelledby="rightDropdown">
+            <button
+              [routerLink]="['account', loggedUser._id]"
+              class="dropdown-item"
+            >
+              Account
+            </button>
             <a
-              id="login"
-              class="nav-link navbar-item"
-              data-toggle="modal"
-              data-target="#modalForm"
-              role="button"
-              aria-expanded="false"
-              aria-controls="collapseExample"
-              >SIGN IN<i class="fa fa-user ml-2"></i
-            ></a>
-          </li>
-        </ng-container>
-        <ng-container *ngIf="_authService.loggedIn()">
-          <li class="nav-item dropdown">
-            <a
-              class="nav-link navbar-item dropdown nav-item"
-              role="button"
-              data-toggle="dropdown"
-              aria-haspopup="true"
-              aria-expanded="false"
-              >My Account<i class="fa fa-user ml-2"></i
-            ></a>
-            <div class="dropdown-menu" aria-labelledby="rightDropdown">
-              <button
-                [routerLink]="['personal', loggedUser?._id]"
-                class="dropdown-item"
-              >
-                Account
-              </button>
-              <a
-                [routerLink]="['/cart']"
-                class="dropdown-item"
-                (click)="_authService.logoutUser()"
-                >Logout</a
-              >
-            </div>
-          </li>
-        </ng-container>
+              [routerLink]="['/cart']"
+              class="dropdown-item"
+              (click)="_authService.logoutUser()"
+              >Logout</a
+            >
+          </div>
+        </li>
         <li class="nav-item">
-          <a class="nav-link navbar-item"
+          <a [routerLink]="['cartify/stores']" class="nav-link navbar-item"
             >STORES<i class="fas fa-map-marker-alt ml-2"></i
           ></a>
         </li>
