--- a/src/app/components/findstore/findstore.component.html
+++ b/src/app/components/findstore/findstore.component.html
@@ -4,4 +4,4 @@
   (mapClick)="onChoseLocation($event)"
   ><agm-marker [latitude]="latitude" [longitude]="longitude"></agm-marker
 ></agm-map> -->
-<div #map id="maps"></div>
+<div #map id="maps" class="mt-5"></div>
