checkout by using Stripe showing purchase summary in success-purchase component, index.d.ts file included for declartion of google map module and StripeCheckout, customized stripe form

--- a/src/app/components/User_Component/success-purchase/success-purchase.component.css
+++ b/src/app/components/User_Component/success-purchase/success-purchase.component.css
@@ -50,22 +50,6 @@ button:hover {
   color: #000;
 }
 
-.modal-title {
-  margin: 0 auto;
-}
-
-.modal-header .close {
-  margin-left: 0 !important;
-}
-
-#close-btn {
-  background-color: transparent !important;
-}
-
-#close-icon {
-  color: #000;
-}
-
 #card-header-summary {
   border-bottom: 1px solid #426c90;
 }
@@ -74,8 +58,24 @@ button:hover {
   border-top: 1px solid #426c90;
 }
 
-#close-btn {
-  background-color: transparent !important;
-  color: #000;
+.media {
+  position: relative;
 }
-/*# sourceMappingURL=checkout.component.css.map */
+
+.media:last-child {
+  border: none;
+}
+
+.media .media-pic img {
+  height: 190px;
+  width: 200px;
+}
+
+.media .media-pic img:hover {
+  cursor: pointer;
+}
+
+.media small {
+  color: green;
+}
+/*# sourceMappingURL=success-purchase.component.css.map */
