--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,5 @@
-<app-navbar (taskEmitter)="dataFromChild($event)"></app-navbar>
+<app-navbar></app-navbar>
 <div class="container-fluid">
-  <!-- <div class="row">
-    <div class="col-12">
-      <div class="container"> -->
   <router-outlet></router-outlet>
-  <!-- </div>
-    </div>
-  </div> -->
 </div>
 <app-footer></app-footer>
