--- a/src/app/components/checkout/checkout.component.html
+++ b/src/app/components/checkout/checkout.component.html
@@ -293,7 +293,7 @@
               </button>
             </div>
             <div class="col">
-              <button class="btn btn-secondary mt-2">
+              <button class="btn btn-secondary mt-2" data-dismiss="modal">
                 Cancel
               </button>
             </div>
