added view of total price

--- a/src/app/components/User_Component/order-details/order-details.component.html
+++ b/src/app/components/User_Component/order-details/order-details.component.html
@@ -62,4 +62,9 @@
       </ul>
     </div>
   </div>
+  <div class="row">
+    <div class="col-md">
+      <h2>Total: ${{ order.amount }}</h2>
+    </div>
+  </div>
 </div>
