social login available and each page markup depends on login type

--- a/src/app/components/User_Component/home/home.component.css
+++ b/src/app/components/User_Component/home/home.component.css
@@ -30,4 +30,14 @@ ul {
 .account-info {
   list-style-type: none;
 }
+
+.socialLogin {
+  color: #007bff !important;
+}
+
+.socialLogin:hover {
+  cursor: pointer;
+  color: #0056b3 !important;
+  text-decoration: underline !important;
+}
 /*# sourceMappingURL=home.component.css.map */
