--- a/src/app/components/User_Component/home/home.component.scss
+++ b/src/app/components/User_Component/home/home.component.scss
@@ -45,3 +45,13 @@ ul {
 .account-info {
   list-style-type: none;
 }
+
+.socialLogin {
+  color: #007bff !important;
+
+  &:hover {
+    cursor: pointer;
+    color: #0056b3 !important;
+    text-decoration: underline !important;
+  }
+}
