--- a/src/app/components/User_Component/order-details/order-details.component.html
+++ b/src/app/components/User_Component/order-details/order-details.component.html
@@ -64,7 +64,7 @@
   </div>
   <div class="row">
     <div class="col-md">
-      <h2>Total: ${{ order.amount }}</h2>
+      <h2>Total: ${{ order?.amount }}</h2>
     </div>
   </div>
 </div>
