--- a/src/app/components/Main_Component/slider/slider.component.html
+++ b/src/app/components/Main_Component/slider/slider.component.html
@@ -63,8 +63,8 @@
       Looks the same. Made a whole lot smarter.
     </h2>
     <p>
-      Sport gear that makes you smarter by being safer.
-      <a [routerLink]="['/cartify/products/category/sport']"> Shop now!</a>
+      Outdoor gear that makes you smarter by being safer.
+      <a [routerLink]="['products', 'outdoor gear']"> Shop now!</a>
     </p>
   </div>
 </div>
