--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -48,7 +48,7 @@
         <p>
           <i class="fas fa-envelope"
             ><span class="push-icon"
-              ><a href="mailto:useremail@email.com?subject=Cartify Help"
+              ><a href="mailto:cartify@email.com?subject=Cartify Help"
                 >Email Us</a
               ></span
             ></i
@@ -58,8 +58,8 @@
     </div>
     <div class="row contact-info py-1">
       <div class="col-12">
-        <p>
-          <i class="fas fa-question-circle" [routerLink]="['cartify']"
+        <p class="footer-links">
+          <i class="fas fa-question-circle"
             ><span class="push-icon">Help Center</span></i
           >
         </p>
@@ -77,35 +77,35 @@
         >
       </li>
       <li class="text-print py-2">
-        <a [routerLink]="['cartify']">About Us</a>
+        <p class="footer-links">About Us</p>
       </li>
       <li class="text-print py-2">
-        <a [routerLink]="['cartify']">Return Policy </a>
+        <p class="footer-links">Return Policy</p>
       </li>
       <li class="text-print py-2">
-        <a [routerLink]="['cartify']">Membership</a>
+        <p class="footer-links">Membership</p>
       </li>
     </ul>
   </div>
   <div class="col-lg-4 col-12 p-5">
     <ul>
       <li class="text-print py-2">
-        <a [routerLink]="['cartify']">Store Events</a>
+        <p class="footer-links">Store Events</p>
       </li>
       <li class="text-print py-2">
-        <a [routerLink]="['cartify']">Gift Cards</a>
+        <p class="footer-links">Gift Cards</p>
       </li>
       <li class="text-print py-2">
-        <a [routerLink]="['cartify']">Coupons and Discounts</a>
+        <p class="footer-links">Coupons and Discounts</p>
       </li>
-      <li class="text-print py-2"><a [routerLink]="['cartify']">Jobs</a></li>
+      <li class="text-print py-2"><p class="footer-links">Jobs</p></li>
     </ul>
   </div>
 </div>
 <div id="footer" class="row footer-contact">
   <div class="col-md-6 p-5">
     <i class="fas fa-copyright"
-      ><span class="push-icon copyright">2019 Cartify Inc.</span></i
+      ><span class="push-icon copyright">2020 Cartify Inc.</span></i
     >
   </div>
   <div class="col-md-6 p-5 d-flex flex-row-reverse">
