--- a/src/app/components/Main_Component/employee-choice/employee-choice.component.html
+++ b/src/app/components/Main_Component/employee-choice/employee-choice.component.html
@@ -1,43 +1,19 @@
+<h1 class="text-center">New Arrivals</h1>
 <div class="row p-5">
-  <div class="card-deck">
-    <div class="card">
-      <img src="..." class="card-img-top" alt="..." />
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">
-          This is a wider card with supporting text below as a natural lead-in
-          to additional content. This content is a little bit longer.
-        </p>
-      </div>
-      <div class="card-footer">
-        <small class="text-muted">Last updated 3 mins ago</small>
-      </div>
-    </div>
-    <div class="card">
-      <img src="..." class="card-img-top" alt="..." />
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">
-          This card has supporting text below as a natural lead-in to additional
-          content.
-        </p>
-      </div>
-      <div class="card-footer">
-        <small class="text-muted">Last updated 3 mins ago</small>
-      </div>
-    </div>
-    <div class="card">
-      <img src="..." class="card-img-top" alt="..." />
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">
-          This is a wider card with supporting text below as a natural lead-in
-          to additional content. This card has even longer content than the
-          first to show that equal height action.
-        </p>
-      </div>
-      <div class="card-footer">
-        <small class="text-muted">Last updated 3 mins ago</small>
+  <div class="col">
+    <div class="card-columns">
+      <div *ngFor="let product of products" class="card">
+        <img src="{{ product.imagePath }}" class="card-img-top" />
+        <div class="card-body text-center">
+          <a
+            class="card-text font-weight-bold"
+            [routerLink]="['products/details', product._id]"
+          >
+            {{ product.name }}
+          </a>
+          <br />
+          <span class="price-text font-weight-bold">${{ product.price }}</span>
+        </div>
       </div>
     </div>
   </div>
