--- a/src/app/components/Main_Component/employee-choice/employee-choice.component.scss
+++ b/src/app/components/Main_Component/employee-choice/employee-choice.component.scss
@@ -1,6 +1,60 @@
-@import url('https://fonts.googleapis.com/css?family=Archivo+Black|Domine:700|Roboto|Roboto+Condensed|Roboto+Slab:700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Archivo+Black|Domine:700|Roboto|Roboto+Condensed|Lora:700|Roboto+Slab:700&display=swap');
 // font-family: 'Archivo Black', sans-serif;
 // font-family: 'Domine', serif;
 // font-family: 'Roboto', sans-serif;
 // font-family: 'Roboto Condensed', sans-serif;
 // font-family: 'Roboto Slab', serif;
+// font-family: 'Lora', serif;
+
+$font-nav:'Roboto Slab',
+serif;
+
+$font-h1:'Domine',
+serif;
+
+$font-generic:'Roboto',
+sans-serif;
+
+$font-h2:'Archivo Black',
+sans-serif;
+
+$font-h3:'Lora',
+serif;
+
+.price-text {
+  color: #767676;
+}
+
+h1 {
+  font-family: $font-h1;
+}
+
+a {
+  color: black;
+
+  &:hover {
+    text-decoration: none;
+  }
+}
+
+.card {
+  border: none;
+}
+
+.card-columns {
+  @media (min-width: 576px) {
+    column-count: 2;
+  }
+
+  @media (min-width: 768px) {
+    column-count: 3;
+  }
+
+  @media (min-width: 992px) {
+    column-count: 4;
+  }
+
+  @media (min-width: 1200px) {
+    column-count: 5;
+  }
+}
