--- a/src/app/components/Main_Component/feature/feature.component.html
+++ b/src/app/components/Main_Component/feature/feature.component.html
@@ -2,17 +2,17 @@
   <div class="col-lg-6 col-12">
     <div class="card mb-3">
       <img src="./../../../assets/img/men-outfit.jpg" class="card-img-top" />
-      <div class="row">
-        <div class="col-lg-6 text-center">
-          <div class="card-body">
+      <div class="row justify-content-between">
+        <div class="col-6">
+          <div class="card-body text-center">
             <p class="card-text font-weight-bold mb-0 pokodotted">$32.99</p>
             <p class="card-text">
               <small class="text-dark">Pokodotted shirt</small>
             </p>
           </div>
         </div>
-        <div class="col-lg-6">
-          <div class="card-body">
+        <div class="col-6">
+          <div class="card-body text-center">
             <p class="card-text font-weight-bold mb-0">$52.99</p>
             <p class="card-text">
               <small class="text-dark">Brown shoes</small>
@@ -22,12 +22,12 @@
       </div>
     </div>
   </div>
-  <div class="col-lg-6 col-12  my-auto p-5">
-    <h2 class="font-weight-bold">Looks the same. Made a whole lot smarter.</h2>
-    <p>
-      Lookout for Fall clothing collection coming out soon next month! While
-      you're at it, checkout for sales from
-      <span><a [routerLink]="['/cartify']">last season's lineup.</a></span>
-    </p>
+  <div id="season-sale" class="col-lg-6">
+    <div class="col-12 clearance">
+      <p class="clearance-text display-4">Clearance SALE!!!</p>
+      <p class="animated bounce infinite slow animated-text display-4">
+        Save up to 80%
+      </p>
+    </div>
   </div>
 </div>
