--- a/src/app/components/Main_Component/feature/feature.component.scss
+++ b/src/app/components/Main_Component/feature/feature.component.scss
@@ -1,9 +1,10 @@
-@import url('https://fonts.googleapis.com/css?family=Archivo+Black|Domine:700|Roboto|Roboto+Condensed|Roboto+Slab:700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Archivo+Black|Domine:700|Roboto|Roboto+Condensed|Lora:700|Roboto+Slab:700&display=swap');
 // font-family: 'Archivo Black', sans-serif;
 // font-family: 'Domine', serif;
 // font-family: 'Roboto', sans-serif;
 // font-family: 'Roboto Condensed', sans-serif;
 // font-family: 'Roboto Slab', serif;
+// font-family: 'Lora', serif;
 
 $font-nav:'Roboto Slab',
 serif;
@@ -17,15 +18,20 @@ sans-serif;
 $font-h2:'Archivo Black',
 sans-serif;
 
+$font-h3:'Lora',
+serif;
 
-.peopleCarouselImg {
-  // width: auto;
-  // height: 472px;
-  // height: 146px;
-  // max-height: 472px;
-  // max-height: 146px;
-  object-fit: contain;
-}
+// Small tablets and large smartphones (landscape view)
+$screen-sm-min: 576px;
+
+// Small tablets (portrait view)
+$screen-md-min: 768px;
+
+// Tablets and small desktops
+$screen-lg-min: 992px;
+
+// Large tablets and desktops
+$screen-xl-min: 1200px;
 
 #feature {
   position: relative;
@@ -41,4 +47,42 @@ h2 {
 
 p {
   font-family: $font-generic;
+}
+
+#season-sale {
+  position: relative;
+  padding-top: 40%;
+  margin-top: 10%;
+  background: url("./../../../../assets/img/season_sale.jpg") no-repeat center;
+  background-size: cover;
+
+  @media (max-width:$screen-lg-min) {
+    padding-top: 60%;
+    font-size: 4em;
+  }
+
+  @media (max-width: $screen-sm-min) {
+    .display-4 {
+      font-size: 1.675rem;
+    }
+  }
+}
+
+.clearance {
+  position: absolute;
+  top: 20px;
+
+  p {
+    color: #b94d4d;
+    font-family: $font-h3;
+  }
+
+
+  .clearance-text {
+    text-align: center;
+  }
+
+  .animated-text {
+    text-align: center;
+  }
 }
