--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -23,8 +23,14 @@
 }
 
 p {
+  color: #CCCCCC;
   padding-top: 10px;
   line-height: 1.5;
+}
+
+p:hover {
+  text-decoration: underline;
+  cursor: pointer;
 }
 
 ul {
