--- a/src/app/components/Product_Component/details/details.component.scss
+++ b/src/app/components/Product_Component/details/details.component.scss
@@ -7,6 +7,36 @@
 // font-family: 'Roboto Slab', serif;
 // font-family: 'Inconsolata', monospace;
 
+// Extra small devices (portrait phones, less than 576px)
+// @media (max-width: 575.98px) {
+//   ...
+// }
+
+// // Small devices (landscape phones, less than 768px)
+// @media (max-width: 767.98px) {
+//   ...
+// }
+
+// // Medium devices (tablets, less than 992px)
+// @media (max-width: 991.98px) {
+//   ...
+// }
+
+// // Large devices (desktops, less than 1200px)
+// @media (max-width: 1199.98px) {
+//   ...
+// }
+
+// Extra large devices (large desktops)
+// No media query since the extra-large breakpoint has no upper bound on its width
+
+
+// .col-sm for larger mobile phones (devices with resolutions ≥ 576px);
+// .col-md for tablets (≥768px);
+// .col-lg for laptops (≥992px);
+// .col-xl for desktops (≥1200px)
+
+
 $font-h1:'Domine',
 serif;
 $font-h1-alternative:'Inconsolata',
@@ -34,6 +64,10 @@ p {
   margin-left: 10px;
 }
 
+.add-order-row {
+  padding-left: 0px;
+}
+
 .fa-check-circle {
   color: #a1c900;
 }
@@ -46,4 +80,12 @@ p {
 .btn-checkout:hover {
   color: #5bc0de !important;
   background-color: transparent !important;
+}
+
+.qty-btn {
+  border: none !important;
+
+  &:focus {
+    outline: none
+  }
 }
