--- a/src/app/components/Product_Component/products/products.component.scss
+++ b/src/app/components/Product_Component/products/products.component.scss
@@ -1,5 +1,35 @@
 @import url('https://fonts.googleapis.com/css?family=Archivo+Black|Domine:700|Roboto|Roboto+Condensed|Roboto+Slab:700&display=swap');
 
+
+// Extra small devices (portrait phones, less than 576px)
+// @media (max-width: 575.98px) {
+//   ...
+// }
+
+// // Small devices (landscape phones, less than 768px)
+// @media (max-width: 767.98px) {
+//   ...
+// }
+
+// // Medium devices (tablets, less than 992px)
+// @media (max-width: 991.98px) {
+//   ...
+// }
+
+// // Large devices (desktops, less than 1200px)
+// @media (max-width: 1199.98px) {
+//   ...
+// }
+
+// Extra large devices (large desktops)
+// No media query since the extra-large breakpoint has no upper bound on its width
+
+
+// .col-sm for larger mobile phones (devices with resolutions ≥ 576px);
+// .col-md for tablets (≥768px);
+// .col-lg for laptops (≥992px);
+// .col-xl for desktops (≥1200px)
+
 $font-h1:'Domine',
 serif;
 $font-h2:'Archivo Black',
@@ -61,22 +91,5 @@ p {
 
   .current {
     background: #17a2b8 !important;
-  }
-}
-
-
-@media (min-width: 768px) and (max-width: 991.98px) {
-  .btn-with-text {
-    display: none;
-  }
-}
-
-.number {
-  display: block
-}
-
-input {
-  @media screen and (min-width:575.98px) {
-    margin-left: 15px;
   }
 }
