--- a/src/app/components/User_Component/success-purchase/success-purchase.component.scss
+++ b/src/app/components/User_Component/success-purchase/success-purchase.component.scss
@@ -12,6 +12,72 @@
 // font-family: 'Roboto', sans-serif;
 // font-family: 'Roboto Condensed', sans-serif;
 // font-family: 'Roboto Slab', serif;
+
+// xs = Extra small <576px
+// Max container width None (auto)
+
+// sm = Small ≥576px
+// Max container width 540px
+
+// md = Medium ≥768px
+// Max container width 720px
+
+// lg = Large ≥992px
+// Max container width 960px
+
+// xl = Extra large ≥1200px
+// Max container width 1140px
+
+
+// .col-sm for larger mobile phones (devices with resolutions ≥ 576px);
+// .col-md for tablets (≥768px);
+// .col-lg for laptops (≥992px);
+// .col-xl for desktops (≥1200px)
+
+
+// Extra small devices (portrait phones, less than 576px)
+// @media (max-width: 575.98px) {
+//   ...
+// }
+
+// // Small devices (landscape phones, less than 768px)
+// @media (max-width: 767.98px) {
+//   ...
+// }
+
+// // Medium devices (tablets, less than 992px)
+// @media (max-width: 991.98px) {
+//   ...
+// }
+
+// // Large devices (desktops, less than 1200px)
+// @media (max-width: 1199.98px) {
+//   ...
+// }
+
+// Extra large devices (large desktops)
+// No media query since the extra-large breakpoint has no upper bound on its width
+
+
+// .col-sm for larger mobile phones (devices with resolutions ≥ 576px);
+// .col-md for tablets (≥768px);
+// .col-lg for laptops (≥992px);
+// .col-xl for desktops (≥1200px)
+
+
+// Extra small devices (portrait phones, less than 576px)
+$max-xs-width: 576.98px;
+
+// // Small devices (landscape phones, less than 768px)
+$max-sm-width: 768px;
+
+// // Medium devices (tablets, less than 992px)
+$max-md-width: 991.98px;
+
+// // Large devices (desktops, less than 1200px)
+$max-lg-width: 1199.98px;
+
+
 $font-h2: "Archivo Black",
 sans-serif;
 
@@ -111,23 +177,16 @@ button {
   }
 }
 
-// xs = Extra small <576px
-// Max container width None (auto)
+#normal-width {
+  @media(max-width:$max-md-width) {
+    display: none;
+  }
+}
 
-// sm = Small ≥576px
-// Max container width 540px
+#landscape-phone {
+  display: none;
 
-// md = Medium ≥768px
-// Max container width 720px
-
-// lg = Large ≥992px
-// Max container width 960px
-
-// xl = Extra large ≥1200px
-// Max container width 1140px
-
-
-// .col-sm for larger mobile phones (devices with resolutions ≥ 576px);
-// .col-md for tablets (≥768px);
-// .col-lg for laptops (≥992px);
-// .col-xl for desktops (≥1200px)
+  @media(max-width:$max-md-width) {
+    display: block;
+  }
+}
