--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -5,6 +5,43 @@
 // font-family: 'Roboto Condensed', sans-serif;
 // font-family: 'Roboto Slab', serif;
 
+
+// Extra small devices (portrait phones, less than 576px)
+// @media (max-width: 575.98px) {
+//   ...
+// }
+
+// // Small devices (landscape phones, less than 768px)
+// @media (max-width: 767.98px) {
+//   ...
+// }
+
+// // Medium devices (tablets, less than 992px)
+// @media (max-width: 991.98px) {
+//   ...
+// }
+
+// // Large devices (desktops, less than 1200px)
+// @media (max-width: 1199.98px) {
+//   ...
+// }
+
+// Extra large devices (large desktops)
+// No media query since the extra-large breakpoint has no upper bound on its width
+
+// Extra small devices (portrait phones, less than 576px)
+$max-xs-width: 576.98px;
+
+// // Small devices (landscape phones, less than 768px)
+$max-sm-width: 768px;
+
+// // Medium devices (tablets, less than 992px)
+$max-xl-width: 991.98px;
+
+// // Large devices (desktops, less than 1200px)
+$max-lg-width: 1199.98px;
+
+
 $text-color: #CCC;
 
 * {
@@ -77,4 +114,18 @@ i {
 .social-media {
   font-size: 28px;
 
+}
+
+.social-links {
+  text-align: right;
+}
+
+@media(max-width:$max-sm-width) {
+  .copyright {
+    display: none;
+  }
+
+  .social-links {
+    text-align: center;
+  }
 }
