--- a/src/app/components/User_Component/home/home.component.css
+++ b/src/app/components/User_Component/home/home.component.css
@@ -9,6 +9,13 @@ h5 {
 
 p {
   font-family: "Roboto", sans-serif;
+  color: #007bff;
+  margin-bottom: 0px;
+}
+
+p:hover {
+  text-decoration: underline;
+  cursor: pointer;
 }
 
 a {
