--- a/src/app/components/cart/cart.component.css
+++ b/src/app/components/cart/cart.component.css
@@ -47,7 +47,23 @@ p {
   color: green;
 }
 
-.card {
-  width: 18rem;
+@media (max-width: 991.98px) {
+  #normal-width {
+    display: none;
+  }
+}
+
+#landscape-phone {
+  display: none;
+}
+
+#landscape-phone .text-shopping-total {
+  font-size: 1.3rem;
+}
+
+@media (max-width: 991.98px) {
+  #landscape-phone {
+    display: block;
+  }
 }
 /*# sourceMappingURL=cart.component.css.map */
