--- a/src/app/components/Product_Component/products/products.component.html
+++ b/src/app/components/Product_Component/products/products.component.html
@@ -3,17 +3,19 @@
     <div class="col-md-5 mt-4">
       <input
         class="form-control search-bar"
-        type="text"
+        type="search"
         name="search"
         placeholder="Search..."
         [(ngModel)]="filter"
       />
-      <span class="search-icon"><i class="fas fa-search"></i></span>
+      <span *ngIf="!filter" class="search-icon"
+        ><i class="fas fa-search"></i
+      ></span>
     </div>
   </div>
   <div class="row">
     <div
-      class="card-deck col-md-3"
+      class="card-deck col-md-4 col-sm-6"
       *ngFor="
         let product of products
           | filter: filter
@@ -26,7 +28,7 @@
             src="{{ product.imagePath }}"
             class="card-img-top"
             alt="Image not found"
-            onerror="this.onerror=null; this.src='./../../../../assets/img/no_exisint_image.png'"
+            onerror="this.onerror=null; this.src='./../../../../assets/img/no_exisint_image.png'; this.class='card-img-top'"
         /></a>
         <div class="card-body d-flex flex-column">
           <h5 class="card-title">{{ product.name }}</h5>
